modified the code in stylednavbar to fix the issue with the navlinks and added scss for stylinh

--- a/src/index.scss
+++ b/src/index.scss
@@ -39,5 +39,15 @@ h5 {
 }
 
 .text {
-    align-items: center;
+	align-items: center;
+}
+
+.navbar-nav {
+	.nav-link {
+		text-decoration: none; // Remove underline
+		color: grey; // Set default color
+		&.active {
+			color: purple; // Set active color
+		}
+	}
 }
