added icons to the contacts page

--- a/src/index.scss
+++ b/src/index.scss
@@ -88,3 +88,21 @@ h5 {
 	color: #ffc107;
 	padding: 10px 0;
 }
+
+.socials {
+	text-align: center;
+	font-size: 2rem;
+	padding-top: 1.5rem;
+}
+
+.singleCol {
+	max-width: 750px;
+	margin: 0 auto;
+}
+
+.social-media-icons-white a {
+	color: #6610f2;
+	font-size: 2.5rem;
+	// padding: 5px;
+	// text-align: justify;
+}
