--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,10 @@
+// Variables
+$headingFont: var(--headingFont);
+$letterSpacing: var(--letterSpacing);
+$grey-500: var(--grey-500);
+$primary-500: var(--primary-500);
+
+// Base Styles
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
@@ -5,7 +12,7 @@ body {
 		'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: #d0d1de;
+	background-color: #f7f6bb;
 }
 
 code {
@@ -13,6 +20,7 @@ code {
 		monospace;
 }
 
+// Headings
 h1,
 h2,
 h3,
@@ -20,11 +28,11 @@ h4,
 h5 {
 	margin: 0;
 	margin-bottom: 1.38rem;
-	font-family: var(--headingFont);
+	font-family: $headingFont;
 	font-weight: 400;
 	line-height: 1.3;
 	text-transform: capitalize;
-	letter-spacing: var(--letterSpacing);
+	letter-spacing: $letterSpacing;
 }
 
 .heading {
@@ -32,26 +40,28 @@ h5 {
 	padding-top: 0.5rem;
 }
 
+// Paragraph
 .p {
 	margin-top: 3;
 }
 
+// Links
 .link {
-	color: var(--grey-500);
+	color: $grey-500;
+	&.active {
+		color: $primary-500;
+	}
+	&:hover {
+		color: #ffc107;
+	}
 }
 
-.active {
-	color: var(--primary-500);
-}
-
-.link:hover {
-	color: #ffc107;
-}
-
+// Display Styles
 .display-1 {
 	font-size: 1000%;
 }
 
+// Buttons
 .custom-btn {
 	color: lightgrey;
 	text-decoration: none;
@@ -61,32 +71,44 @@ h5 {
 	}
 }
 
-.navbar-brand {
-	color: lightgrey;
-	transition: color 0.3s;
-	&:hover {
-		color: white;
+// Navbar
+.navbar {
+	background-color: #114232;
+	&-brand {
+		color: #ffc107;
+		transition: color 0.3s;
+		&:hover {
+			color: white;
+		}
 	}
-}
-
-.navbar-nav {
-	.nav-link {
-		text-decoration: none;
-		color: grey;
-		&.active {
-			color: #ffc107;
+	&-nav {
+		.nav-link {
+			text-decoration: none;
+			color: grey;
+			&.active {
+				color: #ffc107;
+			}
 		}
 	}
 }
 
+// Search bar
+// .search-box {
+//   position: fixed;
+//   bottom: 0;
+//   left: 0;
+//   right: 0;
+//   /* Additional styles for width, padding, etc. */
+// }
+
+// Footer
 .footer {
 	position: fixed;
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	background-color: black;
+	background-color: #114232;
 	color: #ffc107;
-	padding: 10px 0;
 }
 
 .socials {
@@ -101,8 +123,6 @@ h5 {
 }
 
 .social-media-icons-white a {
-	color: #6610f2;
+	color: #124272;
 	font-size: 2.5rem;
-	// padding: 5px;
-	// text-align: justify;
 }
