--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,7 +12,7 @@ body {
 		'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: #f7f6bb;
+	background-color: grey;
 }
 
 code {
@@ -109,6 +109,7 @@ h5 {
 	width: 100%;
 	background-color: #114232;
 	color: #ffc107;
+	padding-top: 0.5rem;
 }
 
 .socials {
