--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -17,7 +17,8 @@
   margin-bottom: 20px;
   border-radius: 10px;
   color: black;
-  background-color: rgb(218, 255, 170);
+  /* background-color: rgb(218, 255, 170); */
+  background-color: #1b92bd;
 }
 
 .Content {
