--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -1,3 +1,36 @@
+.App {
+  display: grid;
+  grid-template-columns: auto 200px;
+  gap: 20px;
+  max-width: 1000px;
+  margin: 0 auto;
+  min-height: 100vh;
+  padding: 20px;
+}
+
+.Column {
+  color: white;
+}
+
+.Title {
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  color: black;
+  /* background-color: rgb(218, 255, 170); */
+  background-color: #1b92bd;
+}
+
+.Content {
+  height: calc(100vh - 200px);
+  overflow-y: scroll;
+  margin-bottom: 20px;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 .team-boxed .item {
 	text-align: center;
 }
