--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,7 +12,7 @@ body {
 		'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: #f1f2ec;
+	background-color: #1fe99c;
 }
 
 code {
@@ -43,7 +43,7 @@ h5 {
 // Paragraph
 .p {
 	margin-top: 3;
-} 
+}
 
 // Links
 .link {
